fix: hide chevron on mobile for navs other than docs

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -868,6 +868,10 @@ nav.menu {
     font-weight: var(--ifm-font-weight-bold);
   }
 
+  .navbar-sidebar__item .hide-chevron::after {
+    background: none !important;
+  }
+
   .navbar-sidebar__item .menu__link:not(.header-button):after {
     content: "";
     display: block;
